fix: layout bug on mobile

--- a/src/styles/_mat-icon.scss
+++ b/src/styles/_mat-icon.scss
@@ -1,5 +1,5 @@
 mat-icon.card-header {
-  font-size: 30px;
+  transform: scale(1.3);
   margin-top: 5px;
   margin-left: 5px;
 }
